# flying-sheep-battles

./: .gitignore  Config.hs  FlyingSheepBattles.cabal  Graphics.hs  Info.plist  LICENSE.txt  Main.cabal  Main.hs  MainWrapper.hs  README.rst  Rect.hs  Resources.hs  SDLTemplate.cabal  SDLTemplate.hs  Setup.hs  Wires.hs  cookies  haskell-sdl.sublime-project  run
FSB/: Clouds.hs  Types.hs
FSB/Renderer/: OpenGL.hs  SDL.hs
FSB/SDL/: Renderer.hs
src/: Clouds.hs  Config.hs  FlyingSheepBattles.hs  Graphics.hs  MainWrapper.hs  SDLTemplate.hs
src/FSB/: Controls.hs  Renderer.hs  Types.hs
src/FSB/Renderer/: Drawer.hs  OpenGL.hs  SDL.hs
