Name:                FlyingSheepBattles
Version:             1.0
Category:            Game
Build-type:          Custom
Extra-source-files:
  mainc.c
  MainWrapper_stub.h
  MainWrapper.hs
  FlyingSheepBattles.hs
Cabal-version:       >=1.2
Data-files:  *.png

Flag bundleall
  Description: Bundle all resources into the .app (OSX only)
  Default:     True

Executable flyingsheepbattles
  Main-is:           MainWrapper.hs
  C-Sources:         mainc.c
  Ghc-options:       -no-hs-main -W
  hs-source-dirs:    src
  Build-depends:     base
                   , SDL >= 0.6.5
                   , SDL-image >= 0.6.1
                   , cabal-macosx >= 0.2.2
                   , FindBin >= 0.0.5
                   , filepath >= 1.3.0.1
                   , containers >= 0.5
                   , netwire >= 4.0.7
                   , lens >= 3.9.0.2
                   , newtype >= 0.2
                   , vector-space >= 0.8.6
                   , transformers >= 0.3.0.0
                   , OpenGL
                   , JuicyPixels
                   , vector
