Name:                SDLTemplate
Version:             1.0
Category:            Game
Build-type:          Simple
Extra-source-files:
  mainc.c
  MainWrapper_stub.h
  MainWrapper.hs
  SDLTemplate.hs
Cabal-version:       >=1.2
Executable sdltemplate
  Main-is:           MainWrapper.hs
  C-Sources:         mainc.c
  Ghc-options:       -no-hs-main
  Build-depends:     base, SDL, SDL-image

