Name:                SDLTemplate
Version:             1.0
Category:            Game
Build-type:          Custom
Extra-source-files:
  mainc.c
  MainWrapper_stub.h
  MainWrapper.hs
  SDLTemplate.hs
Cabal-version:       >=1.2
Data-files:  *.png

Flag bundleall
  Description: Bundle all resources into the .app (OSX only)
  Default:     True

Executable sdltemplate
  Other-modules:     DynPaths_SDLTemplate
  Main-is:           MainWrapper.hs
  C-Sources:         mainc.c
  Ghc-options:       -no-hs-main
  Build-depends:     base
                   , SDL
                   , SDL-image
                   , cabal-macosx
                   , FindBin
                   , filepath
                   , containers
                   , netwire
                   , lens
                   , newtype
                   , vector-space
                   , transformers

